--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,9 @@
-server.port=8210
+spring.profiles.active=dev
 
-spring.thymeleaf.cache=false
-spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.url=jdbc:mysql:///topology?characterEncoding=gbk
-spring.datasource.username=root
-spring.datasource.password=root
+server.port=8210
 spring.jpa.show-sql=true
+logging.level.org.springframework.data.mongodb.core= DEBUG
+spring.jpa.properties.hibernate.format_sql = true
 spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
@@ -20,6 +18,14 @@ spring.freemarker.cache=false
 spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.database=topology
 spring.data.mongodb.host=127.0.0.1
+#spring.data.mongodb.host=106.52.178.196
 spring.data.mongodb.port=27017
 spring.data.mongodb.username=lixing
 spring.data.mongodb.password=123456
+#
+##配置redis
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.redis.jedis.pool.max-active=20
+spring.redis.jedis.pool.min-idle=1
+spring.redis.database=0
