--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,5 +6,12 @@ spring.datasource.username=root
 #本地的
 spring.datasource.password=root
 
-
+#配置mongodb
+spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.database=topology
+spring.data.mongodb.host=127.0.0.1
+#spring.data.mongodb.host=106.52.178.196
+spring.data.mongodb.port=27017
+spring.data.mongodb.username=lixing
+spring.data.mongodb.password=123456
 
