--- a/src/main/resources/application-pro.properties
+++ b/src/main/resources/application-pro.properties
@@ -2,8 +2,19 @@
 
 spring.thymeleaf.cache=false
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.url=jdbc:mysql:///topology?characterEncoding=gbk
+spring.datasource.url=jdbc:mysql:///topology?characterEncoding=gbk&serverTimezone=UTC
 #spring.datasource.url=jdbc:mysql://106.52.178.196:3306/topology?characterEncoding=gbk
 spring.datasource.username=root
+#德荣工业
+spring.datasource.password=root
 #腾讯云
-spring.datasource.password=LiXiaoXing@Li521
+#spring.datasource.password=LiXiaoXing@Li521
+
+
+#配置mongodb
+spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.database=topology
+spring.data.mongodb.host=127.0.0.1
+spring.data.mongodb.port=27017
+#spring.data.mongodb.username=lixing
+#spring.data.mongodb.password=123456
